--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,3 +1,41 @@
 body{
     background-color: rgba(0, 0, 0, 0.5);
 }
+
+/* Estilos generales del navbar */
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px 20px;
+    color: white;
+}
+  
+  /* Estilos para el lado izquierdo (nombre de la empresa) */
+.navbar-left a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+  
+  /* Estilos para el lado derecho (carrito de compras) */
+.navbar-right {
+    display: flex;
+    align-items: center;
+}
+  
+.cart-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    color: white;
+    font-size: 1.5em; /* Ajusta el tamaño del ícono */
+}
+  
+.cart-button:hover {
+    color: #ffcc00; /* Cambia el color del ícono al pasar el cursor */
+}
+  
+  
