--- a/src/app/pages/register/register.component.css
+++ b/src/app/pages/register/register.component.css
@@ -12,6 +12,10 @@ body{
     color: whitesmoke;
 }
 
+.text-input{
+    color: black;
+}
+
 h1{
     font-size: 20px;
 }
@@ -57,4 +61,18 @@ button {
         background-color: rgb(114, 114, 114);
     }
     margin-bottom: 15px;
+}
+
+p {
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+a {
+    color: #3498db;
+    text-decoration: none;
+}
+  
+a:hover {
+    text-decoration: underline;
 }
