--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -11,15 +11,15 @@
             <h1>Registrate</h1>
             <div>
                 <label for="nombre">Nombre</label>
-                <input type="text" name="nombre" id="nombre" [(ngModel)]="usuario.nombre">
+                <input type="text" name="nombre" id="nombre" [(ngModel)]="usuario.nombre" class="text-input">
             </div>
             <div>
                 <label for="apellido">Apellido</label>
-                <input type="text" name="apellido" id="apellido" [(ngModel)]="usuario.apellido">
+                <input type="text" name="apellido" id="apellido" [(ngModel)]="usuario.apellido" class="text-input">
             </div>
             <div>
                 <label for="email">Email</label>
-                <input type="email" name="email" id="email" [(ngModel)]="usuario.email">
+                <input type="email" name="email" id="email" [(ngModel)]="usuario.email" class="text-input">
                 <div *ngIf="registerForm.get('email')?.invalid && registerForm.get('email')?.touched">
                     <span *ngIf="registerForm.get('email')?.errors?.['required']">El email es obligatorio.</span>
                     <span *ngIf="registerForm.get('email')?.errors?.['email']">Formato de email incorrecto.</span>
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <label for="contraseña">Contraseña</label>
-                <input type="password" name="contraseña" id="contraseña" [(ngModel)]="usuario.contrasenia">
+                <input type="password" name="contraseña" id="contraseña" [(ngModel)]="usuario.contrasenia" class="text-input">
                 <div *ngIf="registerForm.get('password')?.invalid && registerForm.get('password')?.touched">
                     <span *ngIf="registerForm.get('password')?.errors?.['required']">La contraseña es obligatoria.</span>
                     <span *ngIf="registerForm.get('password')?.errors?.['minlength']">
@@ -37,7 +37,7 @@
             </div>
             <div>
                 <label for="repetir_contraseña">Repetir Contraseña</label>
-                <input type="password" name="repetir_contraseña" id="repetir_contraseña" [(ngModel)]="usuario.contrasenia">
+                <input type="password" name="repetir_contraseña" id="repetir_contraseña" [(ngModel)]="usuario.contrasenia" class="text-input">
                 <div *ngIf="registerForm.hasError('mismatch') && registerForm.get('confirmPassword')?.touched">
                     <span>Las contraseñas no coinciden.</span>
                 </div>
@@ -45,7 +45,7 @@
     
             <button type="submit" >Registrarse</button>
         </form>
-        <p>¿Ya tienes una cuenta?<a href="/login">Inicia Sesion</a></p>
+        <p>¿Ya tienes una cuenta?<a href="">Inicia Sesion</a></p>
     </div>
 </body>
 </html>
