--- a/src/app/pages/movies-form/movies-form.component.html
+++ b/src/app/pages/movies-form/movies-form.component.html
@@ -20,6 +20,22 @@
                 <label for="fechaSalida">Fecha de salida</label>
                 <p-calendar formControlName="fechaSalida" />
             </div>
+            <div class="field flex flex-column gap-1">
+                <p-multiSelect 
+                    [options]="directoresList" 
+                    formControlName="selectedDirectores" 
+                    optionLabel="name" 
+                    placeholder="Selecciona los directores">
+                </p-multiSelect>
+            </div>
+            <div class="field flex flex-column gap-1">
+                <p-multiSelect 
+                    [options]="actorsList" 
+                    formControlName="selectedActors" 
+                    optionLabel="name" 
+                    placeholder="Selecciona los actores">
+                </p-multiSelect>
+            </div>
             <div class="flex gap-2">
                 <p-button label="Guardar" [loading]="isSaveInProgress" type="submit"/>
                 <p-button label="Secondary" severity="secondary" />
