--- a/src/app/pages/movies-form/movies-form.component.html
+++ b/src/app/pages/movies-form/movies-form.component.html
@@ -1,11 +1,15 @@
-<p-toast />
+<p-toast></p-toast>
 <div class="flex justify-content-center align-items-center min-h-screen w-full">
-    <p-card header="Formulario Pelicula" class="w-10">
-        <form [formGroup]="movieForm" (ngSubmit)="edit?updateMovie():createMovie()" class="flex flex-column gap-2">
+    <p-card header="Formulario Película" class="w-10">
+        <form [formGroup]="movieForm" (ngSubmit)="onSubmit()" class="flex flex-column gap-2">
+            
+            <!-- Campo de Título -->
             <div class="field flex flex-column gap-1">
-                <label for="titulo">Titulo</label>
+                <label for="titulo">Título</label>
                 <input type="text" pInputText formControlName="titulo" class="w-5" />
             </div>
+
+            <!-- Campo de Sinopsis -->
             <div class="field flex flex-column gap-1">
                 <label for="sinopsis">Sinopsis</label>
                 <textarea 
@@ -16,30 +20,41 @@
                     class="w-5">
                 </textarea>
             </div>
+
+            <!-- Campo de Fecha de Salida -->
             <div class="field flex flex-column gap-1">
                 <label for="fechaSalida">Fecha de salida</label>
-                <p-calendar formControlName="fechaSalida" />
+                <p-calendar formControlName="fechaSalida"></p-calendar>
             </div>
+
+            <!-- Selección de Directores -->
             <div class="field flex flex-column gap-1">
+                <label for="directores">Directores</label>
                 <p-multiSelect 
                     [options]="directoresList" 
-                    formControlName="selectedDirectores" 
-                    optionLabel="name" 
+                    formControlName="directores" 
+                    optionLabel="nombre" 
                     placeholder="Selecciona los directores">
                 </p-multiSelect>
             </div>
+
+            <!-- Selección de Actores -->
             <div class="field flex flex-column gap-1">
+                <label for="actores">Actores</label>
                 <p-multiSelect 
                     [options]="actorsList" 
-                    formControlName="selectedActors" 
-                    optionLabel="name" 
+                    formControlName="actores" 
+                    optionLabel="nombre" 
                     placeholder="Selecciona los actores">
                 </p-multiSelect>
             </div>
+
+            <!-- Botones de Guardar y Secundario -->
             <div class="flex gap-2">
-                <p-button label="Guardar" [loading]="isSaveInProgress" type="submit"/>
-                <p-button label="Secondary" severity="secondary" />
+                <p-button label="Guardar" [loading]="isSaveInProgress" type="submit"></p-button>
+                <p-button label="Secundario" severity="secondary"></p-button>
             </div>
         </form>
     </p-card>
 </div>
+
