--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,28 +1,34 @@
 <a routerLink="movies-form/new" class="p-button font-bold">
-  Agregar Pelicula
-</a>
-@for (movie of movies; track movie.id) {
-  <p-card header="{{movie.titulo}}" subheader="{{movie.sinopsis}}" [style]="{ width: '360px' }">
+    Agregar Pelicula
+  </a>
+  
+  <div class="flex flex-wrap gap-3 justify-content-center">
+    <p-card *ngFor="let movie of movies; trackBy: trackById"
+            [header]="movie.titulo"
+            subheader="{{ movie.sinopsis }}"
+            [style]="{ width: '360px' }"
+            class="m-2">
       <ng-template pTemplate="header">
-          <img alt="Card" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" />
+        <img alt="Imagen de película" src="https://primefaces.org/cdn/primeng/images/card-ng.jpg" style="width: 100%; height: 200px; object-fit: cover;">
       </ng-template>
+  
       <p>
-          {{movie.sinopsis}}
+        {{ movie.sinopsis }}
       </p>
       <p>
-          {{movie.fechaSalida}}
+        Fecha de salida: {{ movie.fechaSalida}}
       </p>
-
+  
       <ng-template pTemplate="footer">
-          <div class="flex gap-3 mt-1">
-              <p-button label="Borrar" severity="secondary" class="w-full" styleClass="w-full" />
-              <p-button label="Editar" class="w-full" styleClass="w-full" />
-          </div>
+        <div class="flex gap-3 mt-1">
+          <p-button label="Borrar" severity="secondary" (click)="deleteMovieById(movie.id)" class="w-full" styleClass="w-full" />
+          <p-button label="Editar" [routerLink]="['/movies-form', movie.id]" class="w-full" styleClass="w-full" />
+        </div>
       </ng-template>
-  </p-card>
-}@empty {
-  <p>No existen peliculas</p>
-}
+    </p-card>
+  </div>
+  
+  <p *ngIf="movies.length === 0">No existen peliculas</p>  
 
 
 <!--
